// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppPage should render the AppPage loading when first connected to Optimizely 1`] = `
<div>
  <div
    class="css-1a8f5ni"
  />
  <div
    class="css-jwwzlh"
  >
    <div>
      <div
        class="Typography__Typography___1ZUfE"
        data-test-id="cf-ui-text-container"
      >
        <h1
          class="Heading__Heading___83D3K f36-margin-bottom--m"
          data-test-id="cf-ui-heading"
        >
          Connect Optimizely
        </h1>
        <p
          class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
          data-test-id="cf-ui-paragraph"
        >
          You’re currently connected to Optimizely.
        </p>
        <p
          class="Paragraph__Paragraph___2aO-9 css-j3lppu f36-margin-bottom--m"
          data-test-id="cf-ui-paragraph"
        >
          This access token is valid for 2 hours – after this you must reauthorize with Optimizely.
        </p>
      </div>
    </div>
    <hr
      class="css-10hsrou"
    />
    <div>
      <svg
        aria-label="Loading component..."
        class="SkeletonContainer__SkeletonContainer___23jiu"
        data-test-id="cf-ui-skeleton-form"
        height="100%"
        preserveAspectRatio="xMidYMid meet"
        role="img"
        width="100%"
      >
        <title>
          Loading component...
        </title>
        <rect
          clip-path="url(#cf-ui-skeleton-clip-12)"
          height="100%"
          style="fill: url(#cf-ui-skeleton-clip-gradient-13);"
          width="100%"
          x="0"
          y="0"
        />
        <defs>
          <clippath
            id="cf-ui-skeleton-clip-12"
          >
            <rect
              height="16"
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="35"
            />
            <rect
              height="16"
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="59"
            />
            <rect
              height="16"
              rx="0"
              ry="0"
              width="80%"
              x="0"
              y="83"
            />
          </clippath>
          <lineargradient
            id="cf-ui-skeleton-clip-gradient-13"
          >
            <stop
              offset="0%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                dur="2s"
                id="animation-14"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="50%"
              stop-color="#f7f9fa"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation-14.begin+0.25s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="100%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation-14.begin+0.5s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
          </lineargradient>
        </defs>
      </svg>
    </div>
    <hr
      class="css-10hsrou"
    />
    <div>
      <svg
        aria-label="Loading component..."
        class="SkeletonContainer__SkeletonContainer___23jiu"
        data-test-id="cf-ui-skeleton-form"
        height="100%"
        preserveAspectRatio="xMidYMid meet"
        role="img"
        width="100%"
      >
        <title>
          Loading component...
        </title>
        <rect
          clip-path="url(#cf-ui-skeleton-clip-15)"
          height="100%"
          style="fill: url(#cf-ui-skeleton-clip-gradient-16);"
          width="100%"
          x="0"
          y="0"
        />
        <defs>
          <clippath
            id="cf-ui-skeleton-clip-15"
          >
            <rect
              height="16"
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="35"
            />
            <rect
              height="16"
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="59"
            />
            <rect
              height="16"
              rx="0"
              ry="0"
              width="80%"
              x="0"
              y="83"
            />
          </clippath>
          <lineargradient
            id="cf-ui-skeleton-clip-gradient-16"
          >
            <stop
              offset="0%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                dur="2s"
                id="animation-17"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="50%"
              stop-color="#f7f9fa"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation-17.begin+0.25s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="100%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation-17.begin+0.5s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
          </lineargradient>
        </defs>
      </svg>
    </div>
  </div>
  <div
    class="css-fngmsh"
  >
    <svg
      height="60"
      width="60"
    >
      <g
        fill="none"
        fill-rule="evenodd"
      >
        <path
          d="M0 0h60v60H0z"
          fill="#FFF"
        />
        <g
          fill-rule="nonzero"
        >
          <g
            fill="#0037FF"
          >
            <path
              d="M22.2 6.6a22 22 0 0 0-5.8 10 22 22 0 0 1 5.5-.8L15.7 22c0 1.4 0 2.8.3 4.1l10-10c1.4.2 2.6.6 3.9 1l1.2-1.6A9.4 9.4 0 1 1 43 30.1a21 21 0 0 1 1 3.8L34 44c1.4.3 2.8.4 4.2.4l6.2-6.2c0 1.8-.3 3.7-.7 5.5a22.1 22.1 0 1 0-21.4-37z"
            />
            <path
              d="M29.3 26.3a9.8 9.8 0 0 1-1-3.6l-5.6 5.7-4.4 4.3c.5 1 1.1 1.9 1.8 2.8l6.1-6.2 3-3zm8 5.4c-1.2-.1-2.4-.4-3.6-1l-3 3-6.1 6.2c.8.7 1.7 1.3 2.7 1.8l4.3-4.4 5.7-5.6z"
            />
          </g>
          <path
            d="M28.4 22.7c-.1-1.9.4-3.9 1.4-5.6-1.2-.4-2.5-.8-3.7-1l-10 10a21.3 21.3 0 0 0 2.2 6.7l10-10zm8.9 9l-10 10a22.2 22.2 0 0 0 6.6 2.3l10-10c-.2-1.3-.5-2.6-1-3.8a9.5 9.5 0 0 1-5.6 1.5zm6.3 11.9c.4-1.8.7-3.7.7-5.5l-6.2 6.2c1.8 0 3.6-.2 5.5-.7zm-27.2-27c-.5 1.7-.7 3.6-.7 5.4l6.2-6.2c-1.8 0-3.7.2-5.5.7zm17.3 14.2a9.6 9.6 0 0 1-4.4-4.5L20 35.5a24.6 24.6 0 0 0 4.4 4.4l9.2-9.1z"
            fill="#080738"
          />
          <path
            d="M16.4 16.5A22.1 22.1 0 0 0 0 37.6L15.7 22c0-1.8.2-3.7.7-5.5zm6 43.4a22.1 22.1 0 0 0 21.2-16.3 22 22 0 0 1-5.6.7L22.4 60zm-7-28.7c.5-.5 1-1 1.6-1.3-.4-1.2-.8-2.5-1-3.8L.4 41.8a22 22 0 0 0 2.3 6.6l10-10c-.1-2.6.8-5.3 2.8-7.2zM30.2 43a9.4 9.4 0 0 1-8.5 4.3l-10 10a22 22 0 0 0 6.7 2.3L33.9 44c-1.3-.2-2.5-.6-3.8-1zm-14.6 1.5a9.4 9.4 0 0 1-1.9-2.6l-9.2 9.2A24.6 24.6 0 0 0 9 55.6l9.2-9.2c-1-.5-1.9-1-2.6-1.9z"
            fill="#0037FF"
          />
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`AppPage should render the AppPage with Features and connect button 1`] = `
<div>
  <div
    class="css-1a8f5ni"
  />
  <div
    class="css-jwwzlh"
  >
    <div>
      <div
        class="Typography__Typography___1ZUfE"
        data-test-id="cf-ui-text-container"
      >
        <h1
          class="Heading__Heading___83D3K f36-margin-bottom--m"
          data-test-id="cf-ui-heading"
        >
          Connect Optimizely
        </h1>
        <p
          class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
          data-test-id="cf-ui-paragraph"
        >
          You’re currently connected to Optimizely.
        </p>
        <p
          class="Paragraph__Paragraph___2aO-9 css-j3lppu f36-margin-bottom--m"
          data-test-id="cf-ui-paragraph"
        >
          This access token is valid for 2 hours – after this you must reauthorize with Optimizely.
        </p>
      </div>
    </div>
    <hr
      class="css-10hsrou"
    />
    <div>
      <svg
        aria-label="Loading component..."
        class="SkeletonContainer__SkeletonContainer___23jiu"
        data-test-id="cf-ui-skeleton-form"
        height="100%"
        preserveAspectRatio="xMidYMid meet"
        role="img"
        width="100%"
      >
        <title>
          Loading component...
        </title>
        <rect
          clip-path="url(#cf-ui-skeleton-clip-6)"
          height="100%"
          style="fill: url(#cf-ui-skeleton-clip-gradient-7);"
          width="100%"
          x="0"
          y="0"
        />
        <defs>
          <clippath
            id="cf-ui-skeleton-clip-6"
          >
            <rect
              height="16"
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="35"
            />
            <rect
              height="16"
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="59"
            />
            <rect
              height="16"
              rx="0"
              ry="0"
              width="80%"
              x="0"
              y="83"
            />
          </clippath>
          <lineargradient
            id="cf-ui-skeleton-clip-gradient-7"
          >
            <stop
              offset="0%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                dur="2s"
                id="animation-8"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="50%"
              stop-color="#f7f9fa"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation-8.begin+0.25s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="100%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation-8.begin+0.5s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
          </lineargradient>
        </defs>
      </svg>
    </div>
    <hr
      class="css-10hsrou"
    />
    <div>
      <svg
        aria-label="Loading component..."
        class="SkeletonContainer__SkeletonContainer___23jiu"
        data-test-id="cf-ui-skeleton-form"
        height="100%"
        preserveAspectRatio="xMidYMid meet"
        role="img"
        width="100%"
      >
        <title>
          Loading component...
        </title>
        <rect
          clip-path="url(#cf-ui-skeleton-clip-9)"
          height="100%"
          style="fill: url(#cf-ui-skeleton-clip-gradient-10);"
          width="100%"
          x="0"
          y="0"
        />
        <defs>
          <clippath
            id="cf-ui-skeleton-clip-9"
          >
            <rect
              height="16"
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="35"
            />
            <rect
              height="16"
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="59"
            />
            <rect
              height="16"
              rx="0"
              ry="0"
              width="80%"
              x="0"
              y="83"
            />
          </clippath>
          <lineargradient
            id="cf-ui-skeleton-clip-gradient-10"
          >
            <stop
              offset="0%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                dur="2s"
                id="animation-11"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="50%"
              stop-color="#f7f9fa"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation-11.begin+0.25s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="100%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation-11.begin+0.5s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
          </lineargradient>
        </defs>
      </svg>
    </div>
  </div>
  <div
    class="css-fngmsh"
  >
    <svg
      height="60"
      width="60"
    >
      <g
        fill="none"
        fill-rule="evenodd"
      >
        <path
          d="M0 0h60v60H0z"
          fill="#FFF"
        />
        <g
          fill-rule="nonzero"
        >
          <g
            fill="#0037FF"
          >
            <path
              d="M22.2 6.6a22 22 0 0 0-5.8 10 22 22 0 0 1 5.5-.8L15.7 22c0 1.4 0 2.8.3 4.1l10-10c1.4.2 2.6.6 3.9 1l1.2-1.6A9.4 9.4 0 1 1 43 30.1a21 21 0 0 1 1 3.8L34 44c1.4.3 2.8.4 4.2.4l6.2-6.2c0 1.8-.3 3.7-.7 5.5a22.1 22.1 0 1 0-21.4-37z"
            />
            <path
              d="M29.3 26.3a9.8 9.8 0 0 1-1-3.6l-5.6 5.7-4.4 4.3c.5 1 1.1 1.9 1.8 2.8l6.1-6.2 3-3zm8 5.4c-1.2-.1-2.4-.4-3.6-1l-3 3-6.1 6.2c.8.7 1.7 1.3 2.7 1.8l4.3-4.4 5.7-5.6z"
            />
          </g>
          <path
            d="M28.4 22.7c-.1-1.9.4-3.9 1.4-5.6-1.2-.4-2.5-.8-3.7-1l-10 10a21.3 21.3 0 0 0 2.2 6.7l10-10zm8.9 9l-10 10a22.2 22.2 0 0 0 6.6 2.3l10-10c-.2-1.3-.5-2.6-1-3.8a9.5 9.5 0 0 1-5.6 1.5zm6.3 11.9c.4-1.8.7-3.7.7-5.5l-6.2 6.2c1.8 0 3.6-.2 5.5-.7zm-27.2-27c-.5 1.7-.7 3.6-.7 5.4l6.2-6.2c-1.8 0-3.7.2-5.5.7zm17.3 14.2a9.6 9.6 0 0 1-4.4-4.5L20 35.5a24.6 24.6 0 0 0 4.4 4.4l9.2-9.1z"
            fill="#080738"
          />
          <path
            d="M16.4 16.5A22.1 22.1 0 0 0 0 37.6L15.7 22c0-1.8.2-3.7.7-5.5zm6 43.4a22.1 22.1 0 0 0 21.2-16.3 22 22 0 0 1-5.6.7L22.4 60zm-7-28.7c.5-.5 1-1 1.6-1.3-.4-1.2-.8-2.5-1-3.8L.4 41.8a22 22 0 0 0 2.3 6.6l10-10c-.1-2.6.8-5.3 2.8-7.2zM30.2 43a9.4 9.4 0 0 1-8.5 4.3l-10 10a22 22 0 0 0 6.7 2.3L33.9 44c-1.3-.2-2.5-.6-3.8-1zm-14.6 1.5a9.4 9.4 0 0 1-1.9-2.6l-9.2 9.2A24.6 24.6 0 0 0 9 55.6l9.2-9.2c-1-.5-1.9-1-2.6-1.9z"
            fill="#0037FF"
          />
        </g>
      </g>
    </svg>
  </div>
</div>
`;
